# dataproc-ml-python

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  contributing.md  pyproject.toml  pytest.ini
docs/: api.rst  conf.py  contributing.md  index.rst
google/: __init__.py
google/cloud/: __init__.py
google/cloud/dataproc/: __init__.py
google/cloud/dataproc/ml/inference/: __init__.py  base_model_handler.py  gen_ai_model_handler.py  pytorch_model_handler.py  tensorflow_model_handler.py
google/cloud/dataproc/ml/utils/: gcs_utils.py
google/cloud/dataproc_ml/: __init__.py
google/cloud/dataproc_ml/inference/: base_model_handler.py  gen_ai_model_handler.py  vertex_endpoint_handler.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/inference/: test_gen_ai.py  test_pytorch.py  test_tensorflow.py  test_vertex_endpoint_handler.py
tests/integration/ml/inference/: test_gen_ai.py  test_pytorch.py  test_tensorflow.py
tests/load/inference/: load_test_remote_genai_api.py
tests/load/ml/inference/: load_test_remote_genai_api.py
tests/unit/inference/: test_base_model_handler.py  test_gen_ai_model_handler.py  test_pytorch.py  test_tensorflow.py  test_vertex_endpoint_handler.py
tests/unit/ml/inference/: test_base_model_handler.py  test_gen_ai_model_handler.py  test_pytorch.py  test_tensorflow.py
tests/utils/: gcs_util.py  pytorch_util.py  tensorflow_util.py
